--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,4 +18,13 @@ div p
     background:cornsilk;
      
 }
+#firstPara
+{
+color: black;    
+}
  
+.secondPara
+{
+    color:turquoise;
+    background-color: black;
+}
